--- a/LuckyJetWebNew/index.html
+++ b/LuckyJetWebNew/index.html
@@ -38,7 +38,7 @@
         <div id="responseText" class="text"></div>
         <div class="loader2"></div>
         <div class="visible">
-            <iframe id="myIframe" src="https://100hp.app/lucky/onewin/?exitUrl=https%253A%252F%252F1wdqjx.top%252Fcasino&language=ru&b=demo" onload="hideElements()" scrolling="no"></iframe>
+            <iframe id="myIframe" src="https://100hp.app/lucky/onewin/?exitUrl=https%253A%252F%252F1wdqjx.top%252Fcasino&language=en&b=demo" onload="hideElements()" scrolling="no"></iframe>
         </div>
    
 
