--- a/Mines/index.html
+++ b/Mines/index.html
@@ -277,7 +277,7 @@
         <div id="counter-container">
             <span id="count" class="count-display"></span>
         </div>
-        <button onclick="showModal()">Получить сигнал</button>
+        <button onclick="showModal()">Get signal</button>
     </div>
     <audio id="sound-effect" src="static/star.mp3"></audio>
     <audio id="ok-sound" src="static/ok.mp3"></audio><!-- Звуковой эффект для воспроизведения -->
