--- a/Lckjt/index.html
+++ b/Lckjt/index.html
@@ -27,7 +27,7 @@
             align-items: center;
             width: 100%;
         }
-        @media (max-width: 1920px) {
+        @media (min-width: 1920px) {
             main-container {
                 transform: scale(0.5); 
             }
