--- a/Lckjt/index.html
+++ b/Lckjt/index.html
@@ -27,8 +27,8 @@
             align-items: center;
             width: 100%;
         }
-        @media (min-width: 1920px) {
-            main-container {
+        @media (min-width: 1024px) {
+            .main-container {
                 transform: scale(0.5); 
             }
         }
