--- a/Lckjt/index.html
+++ b/Lckjt/index.html
@@ -27,9 +27,10 @@
             align-items: center;
             width: 100%;
         }
-        @media (min-width: 769px) {
+        @media (min-width: 768px) and (max-width: 1200px) {
             .main-container {
                 transform: scale(0.5); 
+                transform-origin: top center;
             }
         }
         @keyframes glow {
