--- a/Lckjt/index.html
+++ b/Lckjt/index.html
@@ -30,13 +30,14 @@
         /* Для мобильных устройств (до 767px включительно) */
         @media (max-width: 767px) {
             .main-container {
+                transform: scale(1);
             }
         }
         
         /* Для планшетов (768px - 1023px) */
         @media (min-width: 768px) and (max-width: 1023px) {
             .main-container {
-                transform: scale(0.5); /* Легкое уменьшение */
+                transform: scale(1); /* Легкое уменьшение */
 
             }
         }
