--- a/Lckjt/index.html
+++ b/Lckjt/index.html
@@ -19,6 +19,7 @@
             background-size: cover; /* Масштабирует изображение так, чтобы оно полностью покрывало экран */
             background-position: center; /* Центрируем изображение */
             background-repeat: no-repeat; /* Запрещаем повторение изображения */
+            transform: scale(0.5);
         }
 
         .main-container {
