--- a/Lckjt/index.html
+++ b/Lckjt/index.html
@@ -29,6 +29,35 @@
             width: 100%;
         }
 
+        @media (min-width: 1024px) {
+            body {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh; /* Высота 100% видимой области экрана */
+                margin: 0;
+                overflow: hidden; /* Предотвращаем прокрутку */
+                background-color: #090e1d; /* Путь к изображению */
+                background-size: cover; /* Масштабирует изображение так, чтобы оно полностью покрывало экран */
+                background-position: center; /* Центрируем изображение */
+                background-repeat: no-repeat; /* Запрещаем повторение изображения */
+                font-family: Arial, sans-serif; /* Шрифт для текста */
+                color: white; /* Цвет текста */
+                font-size: 16px; /* Размер шрифта для ПК */
+            }
+        
+            .main-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 80%; /* Ограничиваем ширину, чтобы не растягивалось на весь экран */
+                max-width: 1200px; /* Максимальная ширина контейнера */
+                padding: 20px; /* Отступы для красоты */
+            }
+    
+        }
+
+
         @keyframes glow {
             0% { box-shadow: 0 7.5px 15px rgba(0,0,0,0.125), 0 0 20px 10px #ffa500; }
             25% { box-shadow: 0 7.5px 15px rgba(0,0,0,0.125), 0 0 20px 10px #ff5050; }
