--- a/Lckjt/index.html
+++ b/Lckjt/index.html
@@ -27,6 +27,8 @@
             flex-direction: column;
             align-items: center;
             width: 100%;
+            height: 100%;
+            transform: scale(0.5);
         }
 
         @media (min-width: 1024px) {
