--- a/mns-andpc/index.html
+++ b/mns-andpc/index.html
@@ -274,10 +274,29 @@
             height: 75px;
             margin-right: 10px;
         }
+         
+        .header {
+            position: absolute;
+            rotate: 180deg;
+            top: -10vh;
+        }
 
+        .img-footer {
+            align-content: center;
+            height: 20vh;
+            width: 100vw;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: -10vh;
+        }
     </style>
 </head>
 <body>
+    <div class="header">
+        <img class="img-footer" src="static/footer.webp" alt="footer">
+    </div>
     <div id="video-background"></div>
     <div class="main-container">
          <div class="animated-text" id="animated-text"></div>
@@ -302,6 +321,9 @@
     <div id="modal">
     <div class="close-button" onclick="closeModals()">&times;</div>
     <iframe src="slider.html" frameborder="0" style="width:100%; height:100%"></iframe>
+</div>
+<div class="footer">
+    <img class="img-footer" src="static/footer.webp" alt="footer">
 </div>
 <script>
     // Прослушивание сообщений от внедренного iframe или других источников
