--- a/mns-andpc/index.html
+++ b/mns-andpc/index.html
@@ -295,7 +295,7 @@
 </head>
 <body>
     <div class="header">
-        <img class="img-footer" src="static/footer.webp" alt="footer">
+        <img class="img-footer" src="footer.webp" alt="footer">
     </div>
     <div id="video-background"></div>
     <div class="main-container">
@@ -323,7 +323,7 @@
     <iframe src="slider.html" frameborder="0" style="width:100%; height:100%"></iframe>
 </div>
 <div class="footer">
-    <img class="img-footer" src="static/footer.webp" alt="footer">
+    <img class="img-footer" src="footer.webp" alt="footer">
 </div>
 <script>
     // Прослушивание сообщений от внедренного iframe или других источников
