--- a/Lckjt/index.html
+++ b/Lckjt/index.html
@@ -295,7 +295,7 @@
     <div class="main-container">
         <div class="vineet" id="vineet">
             <img src="static/tg.svg" alt="Telegram Icon">
-            vineet_mines_bot
+            WINEARNER_MINES_BOT
         </div>
         
         <div class="container">
