--- a/Lckjt/static/slider.html
+++ b/Lckjt/static/slider.html
@@ -164,7 +164,7 @@
 
         document.addEventListener('DOMContentLoaded', function() {
             const title = document.querySelector('.title');
-            const texts = ["VINEET", "MINES"];
+            const texts = ["WINEARNER", "MINES"];
             let index = 0;
 
             function changeText() {
